<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Popular Movies</string>

    <!-- strings in the Options Menu -->
    <!-- string name="action_settings">Settings</string -->
    <!-- string name="action_refresh">Refresh</string -->>
    <string name="action_new_movies">New movies</string>
    <string name="action_popular_movies">Popular movies</string>
    <string name="action_top_rated_movies">Top rated movies</string>
    <string name="action_upcoming_movies">Upcoming movies</string>
    <string name="action_favorite_movies">Favorite movies</string>
    <string name="action_share">Share</string>

    <!-- strings in the Movie Detail fragment -->
    <string name="activity_detail_name">Movie Details</string>
    <string name="select_movie">Select a movie on the left to show it here</string>
    <string name="movie_title"><xliff:g id="title" example="Inside Out">%1$s</xliff:g></string>
    <string name="movie_synopsis"><xliff:g id="synopsis" example="Growing up can be a bumpy road, and it's no exception for Riley...">%1$s</xliff:g></string>
    <plurals name="movie_user_rating">
        <item quantity="one"><xliff:g id="rating" example="8.1">%1$2.1f</xliff:g> / 10  (<xliff:g id="count" example="1">%2$d</xliff:g> vote)</item>
        <item quantity="other"><xliff:g id="rating" example="8.1">%1$2.1f</xliff:g> / 10  (<xliff:g id="count" example="25">%2$d</xliff:g> votes)</item>
    </plurals>
    <string name="movie_release_date"><xliff:g id="date" example="2015">%1$s</xliff:g></string>
    <string name="movie_poster">Movie poster</string>
    <string name="movie_backdrop">Backdrop image</string>
    <string name="data_unknown">&lt;unknown&gt;</string>
    <string name="reviews_heading">Reviews</string>
    <string name="no_reviews">No reviews yet.</string>
    <string name="content_desc_make_favorite">Add or remove this movie from the list of favorite movies.</string>
    <string name="videos_heading">Videos</string>
    <string name="share_video_message">Check out this movie: <xliff:g id="link" example="http://www.youtube.com/watch?v=12345">%1$s</xliff:g></string>
    <string name="play_video">Play video</string>
    <string name="no_videos">No videos.</string>

    <!-- error messages -->
    <string name="no_permission_try_again">This app needs permission to access the internet in order to download movie information.</string>
    <string name="no_network_try_again">Could not connect to the movie database. Verify your connection settings or try again later.</string>

    <!-- common buttons -->
    <string name="exit">Exit</string>
    <string name="try_again">Try again</string>
</resources>
