<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".DiscoveryActivity">
    <group android:checkableBehavior="single">
        <!-- checked state is handled programmatically -->
        <item
            android:id="@+id/action_popular_movies"
            android:title="@string/action_popular_movies"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_new_movies"
            android:title="@string/action_new_movies"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_top_rated_movies"
            android:title="@string/action_top_rated_movies"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_upcoming_movies"
            android:title="@string/action_upcoming_movies"
            app:showAsAction="never"/>
        <item
            android:id="@+id/action_favorite_movies"
            android:title="@string/action_favorite_movies"
            app:showAsAction="never"/>
    </group>
    <!--<item
        android:id="@+id/action_refresh"
        android:orderInCategory="90"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom"/>-->
</menu>
