<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/MovieDiscoveryTheme"
    android:orientation="vertical"
    tools:context="no.skavdahl.udacity.popularmovies.mdb.MovieDetailActivityFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TODO move pixel values to dimen and use standard definitions when possible -->

        <ImageView
            android:id="@+id/backdrop_imageview"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:minHeight="100dp"
            android:contentDescription="@string/movie_backdrop" />

        <ImageView
            android:id="@+id/poster_imageview"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="130dp"
            android:layout_width="100dp"
            android:layout_height="153dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:minHeight="100dp"
            android:contentDescription="@string/movie_poster" />

        <TextView
            android:id="@+id/movie_title_textview"
            android:layout_below="@id/backdrop_imageview"
            android:layout_toRightOf="@id/poster_imageview"
            android:layout_toEndOf="@id/poster_imageview"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textViewStyle="@style/TextAppearance.AppCompat.Title"
            android:text="@string/movie_title" />

        <TextView
            android:id="@+id/release_rate_textview"
            android:layout_below="@id/movie_title_textview"
            android:layout_alignLeft="@+id/user_rating_textview"
            android:layout_alignStart="@+id/user_rating_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_release_date" />

        <TextView
            android:id="@+id/user_rating_textview"
            android:layout_below="@+id/release_rate_textview"
            android:layout_alignLeft="@id/movie_title_textview"
            android:layout_alignStart="@id/movie_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/movie_user_rating"/>

        <TextView
            android:id="@+id/synopsis_textview"
            android:layout_below="@id/poster_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/movie_synopsis"/>
    </RelativeLayout>
</ScrollView>